syntax = "proto3";

import "google/protobuf/wrappers.proto";

option csharp_namespace = "Shopping.Application.Grpc.Proto";

service ShoppingGrpcService {
    rpc GetProducts (ShoppingProductFilterSorting) returns (ShoppingProductPagedResponse);
    rpc GetProductById (ShoppingProductByIdRequest) returns (ShoppingProductItemResponse);
    rpc GetProductsByIncludedIds(ShoppingProductByIdsRequest) returns (ShoppingProductListResponse);
}

message ShoppingProductFilterSorting {
    NullableStringValue product_group_id = 1;
    NullableDecimalValue min_price = 2;
    NullableDecimalValue max_price = 3;
    google.protobuf.DoubleValue rating = 4;
    bool is_descending = 5;
    google.protobuf.Int32Value order_by = 6;
    int32 page_index = 7;
    int32 page_size = 8;
    NullableStringValue search = 9;
}

message ShoppingProductPagedResponse {
    int32 total_count = 1;
    repeated ShoppingProductItemResponse products = 2;
}

message ShoppingProductListResponse {
    repeated ShoppingProductItemResponse products = 1;
}

message ShoppingProductByIdRequest {
    string id = 1;
}

message ShoppingProductByIdsRequest {
    repeated string id = 1;
}

message ShoppingProductItemResponse {
    string id = 1;
    double rating = 2;
    string name = 3;
    DecimalValue origin_price = 4;
    NullableDecimalValue discount_price = 5;
    int32 number_of_rating = 6;
    int32 number_of_order = 7;
}

message DecimalValue {
    int64 units = 1;
    sfixed32 nanos = 2;
}

message NullableDecimalValue {
    google.protobuf.Int64Value units = 1;
    google.protobuf.Int32Value nanos = 2;
}

message NullableStringValue {
    google.protobuf.StringValue strings = 1;
}